[package]
name = "slipstream"
version = "0.1.0"
edition = "2021"
description = "SSH wrapper for red team operations"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
nix = { version = "0.29", features = ["term", "fs", "signal", "process", "poll"] }
libc = "0.2"
crossterm = "0.28"
strip-ansi-escapes = "0.2"
fs2 = "0.4"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
